# openclonk

./: .git_archival  .gitattributes  .gitignore  .hgeol  .hgignore  .travis.yml  CMakeLists.txt  COPYING  Clonk.workspace  Credits.txt  FindReadline.cmake  GccPchSupport.cmake  Makefile.am  Makefile.in  README  README.linux.txt  README.mac.txt  README.windows.txt  Version.txt  aclocal.m4  appveyor.yml  autogen.sh  clonk.anjuta  clonk.cbp  clonk.desktop  clonk.vc9.sln  config.h.cmake  config.h.in  configure  configure.ac  light_section_assertion.txt  openclonk.appdata.xml  openclonk.desktop  scriptdefinitionsources.txt  version
autotools/: acx_iconv.m4  ax_pthread.m4  reftotemp.m4
cmake/: CheckIncludeFilesCXX.cmake  DeployQt.cmake  DownloadProject.CMakeLists.txt.in  DownloadProject.cmake  FindAudio.cmake  FindDbgHelp.cmake  FindEpoxy.cmake  FindFMod.cmake  FindFreetype.cmake  FindGLEW.cmake  FindGTK3.cmake  FindICONV.cmake  FindPNG.cmake  FindReadline.cmake  FindSDL2.cmake  FindSDL2Mixer.cmake  FindTinyXML.cmake  FindUpnp.cmake  FindZLIB.cmake  GccPchSupport.cmake  GitGetChangesetID.cmake  HandleGccCrossIncludePaths.cmake  RequireCXXSourceCompiles.cmake  Version.cmake  sourcesfiles.cmake
debian/: changelog  control  copyright  docs  openclonk.desktop  openclonk.install  rules
docs/: Makefile  README.cygwin.txt  Template.de.hhk  Template.de.hhp  Template.en.hhc  Template.en.hhp  Template.hhc  Template.hhk  Template.hhp  bitmasks.js  build_chm_files.py  build_contents.pl  build_contents.py  build_hhp.py  clonk.dtd  clonk.py  clonk.xsl  de.po  doku.css  en.po  experimental.py  extra-strings.xml  header.xml  hhc.xsl  hhk.xsl  package-lock.json  package.json  search.js  search.php  xml2po.py
docs/sdk/: .htaccess  cmdline.xml  console.xml  content.xml.in  files.xml  gui.xml  index.xml  lang.xml  playercontrols.xml  renderclonk.xml  renderclonkExamples.xml
docs/sdk-latest/: cmdline.xml  content.xml  files.xml  index.xml  playercontrols.xml
docs/tools/: build_contents.py  build_index.js  clonk.py
engine/: engine.cbp  engine.vc9.vcproj
engine/inc/: C4AList.h  C4Application.h  C4Aul.h  C4AulDebug.h  C4AulExec.h  C4ChatDlg.h  C4Client.h  C4Command.h  C4ComponentHost.h  C4Components.h  C4Config.h  C4Console.h  C4Constants.h  C4Control.h  C4Def.h  C4DefGraphics.h  C4DevmodeDlg.h  C4DownloadDlg.h  C4EditCursor.h  C4Effects.h  C4Extra.h  C4Facet.h  C4FacetEx.h  C4FileClasses.h  C4FileMonitor.h  C4FileSelDlg.h  C4FindObject.h  C4Folder.h  C4Fonts.h  C4FullScreen.h  C4Game.h  C4GameControl.h  C4GameControlNetwork.h  C4GameDialogs.h  C4GameLobby.h  C4GameMessage.h  C4GameObjects.h  C4GameOptions.h  C4GameOverDlg.h  C4GamePadCon.h  (+108 more)
engine/netio/: TstC4NetIO.cpp
engine/res/: Brush.h  Cursor.h  Exact.h  Ift.h  Line.h  Mouse.h  Picker.h  Play.h  Rect.h  c4x.xpm  engine.rc
engine/sec/: C4ConfigShareware.cpp  C4ConfigShareware.h  C4SecurityCertificates.cpp
engine/src/: C4AList.cpp  C4Action.cpp  C4Application.cpp  C4Aul.cpp  C4AulDebug.cpp  C4AulExec.cpp  C4AulLink.cpp  C4AulParse.cpp  C4ChatDlg.cpp  C4Client.cpp  C4Command.cpp  C4ComponentHost.cpp  C4Config.cpp  C4Console.cpp  C4Control.cpp  C4Def.cpp  C4DefGraphics.cpp  C4DevmodeDlg.cpp  C4DownloadDlg.cpp  C4EditCursor.cpp  C4Effect.cpp  C4Extra.cpp  C4Facet.cpp  C4FacetEx.cpp  C4FileClasses.cpp  C4FileMonitor.cpp  C4FileSelDlg.cpp  C4FindObject.cpp  C4Folder.cpp  C4Fonts.cpp  C4FullScreen.cpp  C4Game.cpp  C4GameControl.cpp  C4GameControlNetwork.cpp  C4GameDialogs.cpp  C4GameLobby.cpp  C4GameMessage.cpp  C4GameObjects.cpp  C4GameOptions.cpp  C4GameOverDlg.cpp  (+119 more)
group/: Resource.rc  c4group.cbp  c4group.vc9.vcproj  c4group_cmdl.cpp  c4group_ng.cpp  gunzip4c4group.cpp  resource.h
include/c4script/: c4script.h
licenses/: OpenSSL.txt  clonk-source.txt  getopt.txt  isc_license.txt  open_clonk_header.txt
masterserver/: readme.txt
masterserver/web/: frontend.php  index.php  masterserver.css
netpuncher/: Puncher.dsp  main.cpp
planet/: .gitattributes  AUTHORS  Boomshire.c4s.rar  COPYING
planet/Arena.ocf/: DescDE.rtf  DescDE.txt  DescFR.txt  DescUS.rtf  DescUS.txt  Folder.txt  Title.txt
planet/BackToTheRocks.ocf/: DescDE.rtf  DescUS.rtf  Title.txt
planet/BeyondTheRocks.ocf/: DescDE.rtf  DescUS.rtf  Title.txt
planet/Boomshire.c4s/: Game.txt  Material.c4g  Objects.txt  Scenario.txt  Script.c  Teams.txt
planet/Copy of Lines.c4s/: Material.c4g  ObjectFade.c4d  Title.txt
planet/Decoration.ocd/: Info.txt  Title.txt
planet/Defense.ocf/: DescDE.rtf  DescDE.txt  DescFR.txt  DescUS.rtf  DescUS.txt  Folder.txt  ParameterDefs.txt  StringTblDE.txt  StringTblFR.txt  StringTblUS.txt  Title.txt
planet/Experimental.ocd/: Info.txt
planet/System.c4g/: C4.c  (+21 more)
src/: C4Application.cpp  C4Application.h  C4ForbidLibraryCompilation.h  C4FullScreen.cpp  C4FullScreen.h  C4Game.cpp  C4Game.h  C4Globals.cpp  C4GraphicsSystem.cpp  C4GraphicsSystem.h  C4Include.cpp  C4Include.h  C4Licenses.h  C4Prototypes.h  C4Version.h  C4Version.h.in  C4WinMain.cpp
standard/: Standard.cbp  Standard.vc9.vcproj
tests/: C4NetIOTest.cpp  C4StringTableTest.cpp  C4ValueTest.cpp  CMakeLists.txt  DirectExecTest.cpp  StdFileTest.cpp  TestLog.cpp  TestLog.h  UnicodeHandlingTest.cpp  main.cpp  start_all_scenarios.rs
tests/aul/: AulDeathTest.cpp  AulDiagnosticsTest.cpp  AulMathTest.cpp  AulPredefinedFunctionTest.cpp  AulSyntaxTest.cpp  AulSyntaxTestDetail.h  AulTest.cpp  AulTest.h  ErrorHandler.h  aul_test.cpp
tests/math/: StdMeshQuaternionTest.cpp  StdMeshVectorTest.cpp
tools/: convert_cr_to_cz.py  convert_cr_to_oc.py  create_appimage.sh  create_docs_function_list.py  create_missing_language_entries.py  default.nix  generate_license_headers.cpp  get_current_year.vbs  get_hg_revision.bat  get_hg_revision.sh  list_unused_sounds.py  openclonk.vs14.natvis  osx_bundle_libs  osx_bundle_libs.sh  osx_pack_gamedata.sh  remove_unused_strings.py  upload_snapshot.sh
tools/c4group/: .git_archival  CMakeLists.txt
xcode/: C4D.icns  C4K.icns  C4P.icns  C4S.icns  Clonk.icns  ClonkAppDelegate.h  ClonkAppDelegate.mm  Info.plist  MainMenu.xib  SDLMain.h  SDLMain.mm  SDLMain.xib
(+8793 files in other folders)
